--- a/cv.css
+++ b/cv.css
@@ -3,37 +3,49 @@ body {
   color: #333;
   font-family: Verdana, sans-serif;
   margin: auto;
-  width: 9in;
   padding: .5in;
+  width: 9in;
 }
 a {
-  text-decoration: none;
-  color: #333;
+  color: #af3b7d;
 }
 
 a:hover {
   text-decoration: underline;
 }
 
+blockquote {
+  text-align: center;
+}
+
 h1 {
+  color: #005b96;
   margin-top: 0;
+  text-align: center;
 }
 
 h2 {
-  margin-top: 0;
+  color: #6a88c0;
+  margin-bottom: 0;
+  padding-top: 20px;
+  text-transform: uppercase;
+}
+
+h3 {
+  margin-bottom: 3px;
 }
 
 ul {
-  list-style-type: none;
+  margin-top: 0;
+}
+
+li {
+  margin-top: 0em;
 }
 
 ul li ul {
   list-style-type: disc;
   margin-bottom: 2em;
-}
-
-li {
-  margin-top: 0em;
 }
 
 ul li ul li {
